fix wrong top-section height on mobile homepage

--- a/css/pages/home.scss
+++ b/css/pages/home.scss
@@ -11,6 +11,7 @@
   @extend %grid;
 
   height: 100vh;
+  height: 100svh;
   align-items: end;
   padding: var(--column-gap) 0;
   margin-bottom: 20vh;
